Added setup guide in README

--- a/settings.php.sample
+++ b/settings.php.sample
@@ -13,11 +13,14 @@
     global $width;
     #Change this! Just to prevent random people from being able to change your displayed location
     $secretKey = 'CHANGE ME!';
+    # API key of OpenCellId
     $OpenCellIDkey = 'CHANGE ME!';
+    # API key of Mozilla Location Service
     $MSLkey = 'CHANGE ME!';
+
     #used to round the lat/lon values so you aren't sharing your *exact* location
-    $accuracy = 2; 
-    $workingDirectory = '/tmp/';
+    $accuracy = 9; 
+    $workingDirectory = './';
     $fileName = 'location';
     $filePath = $fileDirectory . $fileName;
     $logName = $fileName . ".log";
