Added submodule for scatter graph

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Chart.js"]
 	path = Chart.js
 	url = https://github.com/nnnick/Chart.js
+[submodule "Chart.Scatter"]
+	path = Chart.Scatter
+	url = https://github.com/dima117/Chart.Scatter
